solve bar&line truncated

--- a/interface/plugins/visualize/styles/main.less
+++ b/interface/plugins/visualize/styles/main.less
@@ -188,6 +188,11 @@ body.application-visualize .visualize-chart.spy-visible + visualize-spy {
 .vis-editor-agg-editor-advanced-toggle {
   padding-bottom: 15px;
 }
+.vis-editor-content {
+  min-width: 0;
+  min-height: 0;
+  overflow: hidden;
+}
 
 vis-editor-sidebar.vis-editor-sidebar div.sidebar-item-title, vis-editor-sidebar.vis-editor-sidebar div.sidebar-item-title:hover {
   background-color: #444 !important;
